# Ai-Agents

./: Tool_Calling_in_llm.ipynb  yt_Script.ipynb
market_reserch_crew/: README.md  pyproject.toml
market_reserch_crew/src/market_reserch_crew/: crew.py  main.py
market_reserch_crew/src/market_reserch_crew/config/: tasks.yaml
