[project]
name = "market_reserch_crew"
version = "0.1.0"
description = "market-reserch-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.2",
    "selenium>=4.40.0",
    "webdriver-manager>=4.0.2",
]

[project.scripts]
market_reserch_crew = "market_reserch_crew.main:run"
run_crew = "market_reserch_crew.main:run"
train = "market_reserch_crew.main:train"
replay = "market_reserch_crew.main:replay"
test = "market_reserch_crew.main:test"
run_with_trigger = "market_reserch_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
